Version 7.4.1
=============

* The framework no longer uses OnIdle internally.


Changes in detail
-----------------
Added CBitmap::FromHandle
Added CBrush::FromHandle
Added CDC::FromHandle
Added CFont::FromHandle
Added CImageList::FromHandle
Added CMenu::FromHandle
Added CPalette::FromHandle
Added CPen::FromHandle
Added CRgn::FromHandle
Added CWnd::FromHandle

Removed ::FromHandle (all versions)

Version 7.4
===========
Bug Fixes
---------
* The DockBar's parent for dock containers was set incorrectly. The wrong 
   DockBar could be destroyed when a dock container was destroyed.   
* Corrected variable initialisation in CMenuMetrics
* Adjusted text position in Windows 7 menus.
* Several bug fixes to CString
* Fixed CMenu::GetMenuString
	 
New Features and Enhancements
-----------------------------
* Added CImageList. CImageList manages a collection of images (Image List).
* Added ToolBarDemo Sample. 
   - demonstrates ToolBar customization.
   - demonstrates adding and removing ToolBar buttons.
   - demonstrates saving and restoring ToolBar layout.
   - demonstrates changing the ToolBar's image list.
* Updated CWnd:
   - Modified OnCreate. It now provides a LPCREATSTRUCT. Any function overriding
      OnCreate will need to be modified too. 
   - Added OnAttach. It is called when a window is attached to a CWnd.
   - Added OnClose. It is called when a window asks to be closed (WM_CLOSE).
   - Added OnDestroy. It is called when a window is destroyed (WM_DESTROY).
   - CreateWindowEx now uses HMENU or UINT instead of CMenu*. This allows 
      the menu parameter to specify a menu for a parent window, or a window ID
      for a child window.   
* Updated CSocket:
   - now supports WinCE
   - send and receive functions now use char and support binary data.
   - port arguments are now UINT, not LPCTSTR
* Updated CFrame:
   - Frames now use the IDW_READY resource for the "Ready" string.
   - CFrame no longer requires the number of images in the ToolBar bitmap to 