@@ -212,21 +212,31 @@ namespace Win32xx
 	{
 		assert( GetApp() );
 
+		// Find an existing pernament CMenu from the map
 		CMenu* pMenu = GetApp()->GetCMenuFromMap(hMenu);
-		if ((hMenu != 0) && (pMenu == 0))
-		{
-			pMenu = new CMenu;
-			pMenu->m_hMenu = hMenu;
-			GetApp()->m_csMapLock.Lock();
-			GetApp()->m_mapHMENU.insert(std::make_pair(hMenu, pMenu));
-			GetApp()->m_csMapLock.Release();
-			pMenu->m_IsTmpMenu = TRUE;
-
-			// Ensure this thread has the TLS index set
+		if ((0 != hMenu) && (0 == pMenu))
+		{		
+			// Find any existing temporary CMenu for the HMENU
 			TLSData* pTLSData = GetApp()->SetTlsIndex();
-			pTLSData->vTmpMenus.push_back(pMenu); 
+			std::vector <MenuPtr>::iterator v;
+			for (v = pTLSData->vTmpMenus.begin(); v != pTLSData->vTmpMenus.end(); ++v)
+			{
+				if ( (*v)->GetHandle() == hMenu )
+				{
+					pMenu = (*v).get();
+					break;
+				}
+			}
 
-			::PostMessage(0, UWM_CLEANUPTEMPS, 0, 0);
+			if (0 == pMenu)
+			{
+				pMenu = new CMenu;
+				pMenu->m_hMenu = hMenu;
+				pMenu->m_IsTmpMenu = TRUE;
+				pTLSData->vTmpMenus.push_back(pMenu); 
+
+				::PostMessage(0, UWM_CLEANUPTEMPS, 0, 0);
+			}
 		}
 		return pMenu;
 	}
